WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
Bug 68232
[Qt] REGRESSION(
r95091
) It made many tests flakey
https://bugs.webkit.org/show_bug.cgi?id=68232
Summary
[Qt] REGRESSION(r95091) It made many tests flakey
Renata Hodovan
Reported
2011-09-16 01:17:11 PDT
Failed test: inspector/timeline/timeline-enum-stability.html Diff:
http://build.webkit.org/results/Qt%20Linux%20Release/r95091%20(37472)/inspector/timeline/timeline-enum-stability-pretty-diff.html
Attachments
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2011-09-16 10:03:27 PDT
- inspector/timeline/timeline-animation-frame.html marked as failing test by
http://trac.webkit.org/changeset/95095
- inspector/timeline/timeline-enum-stability.html was skipped by
http://trac.webkit.org/changeset/95277
- inspector/timeline/timeline-event-dispatch.html was skipped by
http://trac.webkit.org/changeset/95292
And now inspector/timeline/timeline-layout.html is flakey ... It is non-sense ... I tried to revert
r95091
locally, and now all tests pass, so it must be a regression. Could you check it, please?
Csaba Osztrogonác
Comment 2
2011-09-16 10:04:47 PDT
***
Bug 68248
has been marked as a duplicate of this bug. ***
Csaba Osztrogonác
Comment 3
2011-09-16 10:27:38 PDT
Sorry, but I had to roll it out:
http://trac.webkit.org/changeset/95302
We can't leave the bot red for the weekend. :(
Csaba Osztrogonác
Comment 4
2011-09-22 15:37:41 PDT
It might be related to
https://bugs.webkit.org/show_bug.cgi?id=66223
Jocelyn Turcotte
Comment 5
2012-05-15 08:20:44 PDT
It was rolled out and correctly relanded in
http://trac.webkit.org/changeset/95404
Closing this one.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug