[Qt] REGRESSION(r95091) It made many tests flakey https://bugs.webkit.org/show_bug.cgi?id=68232

Unreviewed rolling out r95091 and followup patches.

Source/WebCore:

* English.lproj/localizedStrings.js:
* bindings/v8/V8Proxy.cpp:
(WebCore::V8Proxy::callFunction):
* bindings/v8/V8Proxy.h:
* bindings/v8/custom/V8CustomVoidCallback.cpp:
(WebCore::invokeCallback):
* dom/ScriptedAnimationController.cpp:
(WebCore::ScriptedAnimationController::registerCallback):
(WebCore::ScriptedAnimationController::cancelCallback):
(WebCore::ScriptedAnimationController::serviceScriptedAnimations):
* inspector/InspectorInstrumentation.cpp:
* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::willCallFunction):
* inspector/InspectorTimelineAgent.cpp:
* inspector/InspectorTimelineAgent.h:
* inspector/TimelineRecordFactory.cpp:
* inspector/TimelineRecordFactory.h:
* inspector/front-end/TimelineAgent.js:
* inspector/front-end/TimelinePanel.js:
(WebInspector.TimelinePanel):
(WebInspector.TimelinePanel.prototype.get _recordStyles):
(WebInspector.TimelinePanel.prototype._innerAddRecordToTimeline):
(WebInspector.TimelinePanel.prototype._clearPanel):
(WebInspector.TimelinePanel.FormattedRecord):
(WebInspector.TimelinePanel.FormattedRecord.prototype._generatePopupContent):
(WebInspector.TimelinePanel.FormattedRecord.prototype._getRecordDetails):

LayoutTests:

* inspector/timeline/timeline-animation-frame-expected.txt: Removed.
* inspector/timeline/timeline-animation-frame.html: Removed.
* inspector/timeline/timeline-enum-stability-expected.txt:
* inspector/timeline/timeline-test.js:
* platform/chromium/inspector/timeline/timeline-animation-frame-expected.txt: Removed.
* platform/qt/Skipped:
* platform/qt/test_expectations.txt:

Canonical link: https://commits.webkit.org/84172@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@95302 268f45cc-cd09-0410-ab3c-d52691b4dbfc